clair-rc.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  namespace: quay-enterprise
  name: clair
  labels:
    quay-enterprise-component: clair
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  template:
    metadata:
      labels:
        quay-enterprise-component: clair
    spec:
      containers:
      - image: quay.io/redhat/clair-jwt:v3.0.4
        imagePullPolicy: IfNotPresent
        name: clair
        ports:
        - containerPort: 6060
          protocol: TCP
        - containerPort: 6061
          protocol: TCP
        resources: {}
        volumeMounts:
        - mountPath: /clair/config
          name: configvolume
        - mountPath: /etc/pki/ca-trust/source/anchors/ca.crt
          name: clair-trust-ca
          subPath: ca.crt
      dnsPolicy: ClusterFirst
      imagePullSecrets:
      - name: redhat-pull-secret
      restartPolicy: Always		
      schedulerName: default-scheduler		
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: configvolume
        projected:
          defaultMode: 420
          sources:
          - secret:
              items:
              - key: security_scanner.pem
                path: security_scanner.pem
              name: security-scanner-key-secret
          - secret:
              items:
              - key: config.yaml
                path: config.yaml
              name: clair-config-secret
      - name: clair-trust-ca
        projected:
          defaultMode: 420
          sources:
          - secret:
              name: clair-trust-ca-secret
