quay-enterprise-config-service-clusterip.yaml
  apiVersion: v1
  kind: Service
  metadata:
    namespace: quay-enterprise
    name: quay-enterprise-config
  spec:
    type: ClusterIP
    ports:
      - protocol: TCP
        name: https
        port: 8443
        targetPort: 8443
    selector:
      quay-enterprise-component: config-app
