quay-enterprise-service-clusterip.yaml
  apiVersion: v1
  kind: Service
  metadata:
    namespace: quay-enterprise
    name: quay-enterprise-clusterip
  spec:
    type: ClusterIP
    ports:
      - protocol: TCP
        name: http
        port: 80
        targetPort: 8080
      - protocol: TCP
        name: https
        port: 8443
        targetPort: 8443
    selector:
      quay-enterprise-component: app
