clair-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: clair
spec:
  port:
    targetPort: 6060
  to:
    kind: Service
    name: clair-clusterip
    weight: 100
