quay-enterprise-app-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: quay-enterprise
spec:
  tls:
    termination: edge
  to:
    kind: Service
    name: quay-enterprise-clusterip
    weight: 100
